[gd_scene load_steps=3 format=2]

[ext_resource path="res://entity/fx/fountain_fx.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 8.7
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 16.58
gravity = Vector3( 0, 120, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 0.61

[node name="fountain_fx" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.819608 )
amount = 200
process_material = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer_death" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_death" to="." method="_on_Timer_death_timeout"]
